# rattlesnake

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  EditPage.qml  InstrumentButton.qml  MetronomePage.qml  README.md  main.cpp  main.qml  media.qrc  metronome.cpp  metronome.h  note.cpp  note.h  org.kde.rattlesnake.desktop  org.kde.rattlesnake.json  qml.qrc  tapin.cpp  tapin.h
components/: ActionButton.qml  BottomDrawer.qml  DoubleActionButton.qml
icons/: tap-in.svg.license
sounds/: clicker1.ogg.license
src/: CMakeLists.txt  EditPage.qml  InstrumentButton.qml  MetronomePage.qml  main.cpp  main.qml  media.qrc  metronome.cpp  metronome.h  note.cpp  tapin.cpp  tapin.h
